- fifo_poll(): If the last writer has disappeared, detect this and return   POLLHUP, per POSIX. - fifo_close(): Use the new fifo_socantrcvmore(), which is like the   garden-variety socantrcvmore(), except it specifies POLL_HUP rather   than POLL_IN (so the correct code for SIGIO is sent). - sowakeup(): Allow POLL_HUP as a code (notifies poll'ers with POLLHUP). - Add test cases for correct POLLHUP behavior with FIFOs.

Fixes PR kern/56429.